# mpl_qt_tabbed_plots

./: LICENSE  README.md  pyproject.toml
src/abracatabra/: __init__.py  animation_player.py  custom_widget.py  figure_widget.py  tab_group_container.py  tabbed_figure_widget.py  tabbed_plot_window.py
src/mpl_qt_tabbed_plots/: __init__.py  blah.py  figure_widget.py  tabbed_figure_widget.py  tabbed_plot_window.py
tests/: test_plot_windows.py  test_readme.py
